# ai-agents-swiss-knife

./: .gitignore  README.md  pyproject.toml
scripts/: run_server.cmd
server/: config.py  mcp_bridge.py  mcp_server.py  mcp_transport.py  telemetry.py
server/tools/: excel_mcp.py  fs.py  git_tools.py  json_tools.py  process_mcp.py  search_mcp.py  shell.py  zip_tools.py
server/ui/: app.js  styles.css
skills/mcp-toolbox/references/: toolbox.md
