[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agents-swiss-knife"
version = "0.1.0"
description = "Local MCP tool server with an HTTP API and stdio bridge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openpyxl",
]

[project.scripts]
ai-agents-swiss-knife-server = "server.mcp_server:run"
ai-agents-swiss-knife-bridge = "server.mcp_bridge:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["server*"]
